# DataRush

./: .gitignore  .gitlab-ci.yml  CREDENTIALS.md  LICENCE  README.md  compose.yaml
docs/: docusaurus.config.ts  package-lock.json
docs/docs/: intro.md
img/: postman_e2e.json
infrastructure/: .gitignore
infrastructure/backend/: .env.template
infrastructure/celery-exporter/: .env.template
infrastructure/checker/: .env.template
infrastructure/grafana/: grafana.ini
infrastructure/minio/: .env.template
infrastructure/nginx/: nginx.conf
infrastructure/pgadmin/: .env.template  password  servers.json
infrastructure/postgres/: .env.template
infrastructure/postgres-exporter/: .env.template
infrastructure/prometheus/: prometheus.yaml
infrastructure/redis/: redis.conf
infrastructure/redis-exporter/: .env.template
infrastructure/ssl/: cert.pem  fullchain.pem
services/backend/: .dockerignore  .env.template  Dockerfile  Dockerfile.staticfiles  README.md  pyproject.toml
services/backend/api/: urls.py
services/backend/api/v1/: auth.py  handlers.py  router.py
services/backend/api/v1/achievement/: schemas.py  views.py
services/backend/api/v1/competition/: schemas.py  views.py
services/backend/api/v1/ping/: schemas.py  views.py
services/backend/api/v1/review/: auth.py  schemas.py  views.py
services/backend/api/v1/task/: schemas.py  views.py
services/backend/api/v1/team/: schemas.py  views.py
services/backend/api/v1/user/: schemas.py  views.py
services/backend/api/v1/users/: schemas.py  views.py
services/backend/apps/achievement/: admin.py  apps.py  models.py
services/backend/apps/achievement/management/commands/: init_achievments.py
services/backend/apps/achievement/migrations/: 0001_initial.py  0002_achievement_need_count_achievement_type.py  0002_initial.py  0003_alter_userachievement_options_and_more.py  0003_remove_achievement_need_count_and_more_squashed_0004_alter_achievement_slug.py  0005_alter_achievement_icon.py
services/backend/apps/competition/: admin.py  apps.py  models.py  signals.py  tests.py
services/backend/apps/competition/migrations/: 0001_initial.py  0002_alter_competition_image_url.py  0002_alter_state_options_alter_state_changed_at_and_more.py  0002_alter_state_state.py  0002_competition_participants.py  0002_competition_tasks_alter_competition_participants_and_more.py  0003_remove_competition_tasks.py  0003_state.py  0004_alter_competition_description_and_more.py  0004_state_changed_at.py
services/backend/apps/competitions/: apps.py  models.py
services/backend/apps/core/: admin.py  apps.py
services/backend/apps/core/contents/: presentation.pptx
services/backend/apps/core/management/commands/: generate_data.py  generate_pretty_data.py
services/backend/apps/review/: admin.py  apps.py  models.py  signals.py
services/backend/apps/review/migrations/: 0001_initial.py  0002_initial.py  0002_review.py  0003_alter_review_evaluation.py  0003_alter_review_options_alter_reviewer_options_and_more.py  0003_review_submission.py
services/backend/apps/task/: admin.py  apps.py  models.py  tasks.py  validators.py
services/backend/apps/task/migrations/: 0001_initial.py  0002_alter_competitiontask_options.py  0002_alter_competitiontask_options_and_more.py  0002_alter_competitiontasksubmission_options_and_more.py  0002_competetiontasksumbission_reviewers.py  0002_competitiontask_attachments_and_more.py  0002_competitiontask_reviewers.py  0002_remove_competitiontasksubmission_plagiarism_checked_and_more.py  0003_alter_competitiontask_description.py  0003_alter_competitiontaskattachment_task.py  0003_competitiontask_max_attemps_and_more.py  0003_remove_competitiontask_attachments.py  0004_alter_competitiontaskattachment_bind_at.py  0004_competitiontask_submission_reviewers_count_and_more.py  0004_merge_20250301_1739.py  0005_alter_competitiontask_description_and_more.py
services/backend/apps/task/tests/: test_tasks.py
services/backend/apps/team/: admin.py  apps.py  models.py
services/backend/apps/team/migrations/: 0001_initial.py
services/backend/apps/user/: admin.py  apps.py  models.py  signals.py  test.py
services/backend/apps/user/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_password_and_more.py  0002_user_achievements.py  0002_user_created_at.py  0002_user_status.py  0003_alter_user_status.py
services/backend/apps/users/: apps.py
services/backend/config/: asgi.py  auth.py  celery.py  errors.py  settings.py  urls.py  wsgi.py
services/backend/integrations/checker/: healthcheck.py
services/backend/scripts/: check  initdb  initdb_advanced
services/backend/templates/admin/: competition_leaderboard.html
services/checker/: .env.template  Dockerfile  Dockerfile.checker  README.md  checker_requirements.txt  config.py  main.py  pyproject.toml
services/docs/: Dockerfile  README.md
services/frontend/: .env  .gitignore  Dockerfile  README.md  (+8 more)
ssl/: privkey.pem
tests/: README.md  postman_collection.json
tests/e2e/: .env.template  README.md  conftest.py  pyproject.toml
tests/e2e/scripts/: check
tests/e2e/tests/: test_backend_health.py
(+148 files in other folders)
